# sqliter-py

./: .gitignore  .markdownlint.yaml  .markdownlintrc  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  TODO.md  context7.json  demo.py  index.html  main.py  mkdocs.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/workflows/: mypy.yml  testing.yml
.planning/: FEAT-cache.md  FEAT-foreign-keys.md  FEAT-pickle.md
api-reference/: index.html
api-reference/async-orm/: index.html
api-reference/async-query-builder/: index.html
api-reference/async-sqliterdb/: index.html
api-reference/base-model/: index.html
api-reference/exceptions/: index.html
api-reference/foreign-keys/: index.html
api-reference/helpers/: index.html
api-reference/many-to-many/: index.html
api-reference/orm/: index.html
api-reference/query-builder/: index.html
api-reference/sqliterdb/: index.html
changelog/: index.html
contributing/: index.html
docs/: CNAME  exceptions.md  index.md  installation.md  license.md  quickstart.md  usage.md
docs/api-reference/: async-orm.md  async-query-builder.md  async-sqliterdb.md  base-model.md  exceptions.md  foreign-keys.md  helpers.md  index.md  many-to-many.md  orm.md  query-builder.md  sqliterdb.md
docs/changelog/: index.md
docs/contributing/: index.md
docs/guide/: aggregates.md  asyncio.md  caching.md  connecting.md  data-operations.md  data-ops.md  debug.md  exceptions.md  fields.md  filtering.md  foreign-keys.md  guide.md  many-to-many.md  models.md  ordering.md  properties.md  tables.md  transactions.md
docs/guide/foreign-keys/: explicit.md  orm.md
docs/hooks/: __init__.py  google_style_notes.py
docs/todo/: index.md
docs/tui-demo/: async.md  caching.md  connection.md  constraints.md  crud.md  errors.md  field-selection.md  filters.md  index.md  models.md  ordering.md  orm.md  results.md  string-filters.md  timestamps.md  transactions.md
exceptions/: index.html
guide/aggregates/: index.html
guide/asyncio/: index.html
guide/caching/: index.html
guide/connecting/: index.html
guide/data-operations/: index.html
guide/data-ops/: index.html
guide/debug/: index.html
guide/exceptions/: index.html
guide/fields/: index.html
guide/filtering/: index.html
guide/foreign-keys/: index.html
guide/foreign-keys/explicit/: index.html
guide/foreign-keys/orm/: index.html
guide/guide/: index.html
guide/many-to-many/: index.html
guide/models/: index.html
guide/ordering/: index.html
guide/properties/: index.html
guide/tables/: index.html
guide/transactions/: index.html
installation/: index.html
license/: index.html
quickstart/: index.html
search/: search_index.json
sqliter/: __init__.py  constants.py  exceptions.py  helpers.py  sqliter.py
sqliter/asyncio/: __init__.py  db.py  query.py
sqliter/asyncio/orm/: __init__.py  fields.py  m2m.py  m2m.pyi  model.py  query.py
sqliter/model/: __init__.py  foreign_key.py  model.py  unique.py
sqliter/orm/: __init__.py  fields.py  foreign_key.py  m2m.py  model.py  query.py  registry.py
sqliter/query/: __init__.py  aggregates.py  query.py
sqliter/tui/: __init__.py  __main__.py  app.py  runner.py
sqliter/tui/demos/: __init__.py  async_demos.py  base.py  caching.py  connection.py  constraints.py  crud.py  errors.py  field_selection.py  filters.py  models.py  ordering.py  orm.py  results.py  string_filters.py  timestamps.py  transactions.py
sqliter/tui/styles/: app.tcss
sqliter/tui/widgets/: __init__.py  code_display.py  demo_list.py  output_display.py
tests/: benchmark_validation.py  conftest.py  test_advanced_filters.py  test_aggregates.py  test_asyncio_core.py  test_asyncio_orm.py  test_bulk_insert.py  test_bulk_update.py  test_cache.py  test_complex_types.py  test_context_manager.py  test_dates.py  test_debug_logging.py  test_drop_table.py  test_execeptions.py  test_exections.py  test_execute_sql.py  test_foreign_keys.py  test_foreign_keys_orm.py  test_helpers.py  test_indexes.py  test_m2m.py  test_model.py  test_nested_transactions.py  test_optional_fields.py  test_optional_fields_complex_model.py  test_order_method.py  test_orm_fields.py  test_prefetch_related.py  test_properties.py  test_query.py  test_select_related.py  test_sqliter.py  test_timestamps.py  test_transaction_rollback.py  test_type_conversion.py  test_unique.py  typing_async_m2m.py
tests/tui/: __init__.py  test_app.py  test_base.py  test_demo_registry.py  test_init.py  test_main.py  test_runner.py
tests/tui/unit/: __init__.py  test_demos_async.py  test_demos_connection.py  test_demos_constraints.py  test_demos_crud.py  test_demos_field_selection.py  test_demos_filters.py  test_demos_models.py  test_demos_others.py  test_demos_results.py  test_demos_string_filters.py  test_demos_transactions.py
tests/tui/widgets/: __init__.py  test_code_display.py  test_demo_list.py  test_output_display.py
todo/: index.html
tui-demo/: index.html
tui-demo/async/: index.html
tui-demo/caching/: index.html
tui-demo/connection/: index.html
tui-demo/constraints/: index.html
tui-demo/crud/: index.html
tui-demo/errors/: index.html
tui-demo/field-selection/: index.html
tui-demo/filters/: index.html
tui-demo/models/: index.html
tui-demo/ordering/: index.html
tui-demo/orm/: index.html
tui-demo/results/: index.html
tui-demo/string-filters/: index.html
tui-demo/timestamps/: index.html
tui-demo/transactions/: index.html
usage/: index.html
